[package]
name = "n3-core"
version = "0.0.1"
authors = ["h <besqer996@gnu.ac.kr>"]
edition = "2018"

description = "Super-Simple semantic neural network model compiler front-end."
homepage = "https://github.com/podo-os"
repository = "https://github.com/podo-os/n3-core"
readme = "README.md"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
n3-parser = "0.2"
symengine = "0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
walkdir = "2.3"
