[package]
name = "n3-core"
version = "0.1.8"
authors = ["h <besqer996@gnu.ac.kr>"]
edition = "2018"

description = "Super-Simple semantic neural network model compiler front-end."
homepage = "https://github.com/podo-os"
repository = "https://github.com/podo-os/n3-core"
readme = "README.md"
license = "BSD-3-Clause"

include = [
    "src/**/*.rs",
    "std/**/*.n3",
    "Cargo.toml",
    "LICENSE",
    "README.md",

    "models/**/*.n3",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["serde", "n3-parser/serde"]

[dependencies]
generator = "0.6"
heck = "0.3"
n3-parser = "0.3"
include_dir = "0.6"
serde = { version = "1.0", optional = true, features = ["derive"] }
symengine = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
walkdir = "2.3"

[dev-dependencies]
bincode = "1.2"
